fix for burger and margin on right on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 #hamburger {
     display: none;
 }
+#navList {
+    padding-right: 30px;  
+}
 body {
     overflow-x: hidden;
 }
